--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,79 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: BradfordLL-Light;
+  src: url('/BradfordLL-Light.otf');
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'BradfordLL-Light', sans-serif;
+  /* padding: 50px; */
+}
+
+* {
+  text-decoration: none;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+}
+
+nav > a {
+  margin: 0 5px;
+}
+
+.carousel {
+  /* margin: 25px 10px; */
+  margin: 0 auto;
+  padding: 50px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  object-fit: cover;
+  width: 100%;
+}
+
+.contentWindow {
+  /* height: 90vh; */
+  position: relative;
+}
+
+.contentWindow > h2 {
+  color: red;
+}
+
+.carouselImage {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.control-arrow {
+  pointer-events: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  color: rgba(0, 0, 0, 0.3);
+  user-select: none;
+}
+
+button.control-arrow {
+  opacity: 0 !important;
+  color: transparent !important;
+  background-color: transparent !important;
 }
