--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: 'BradfordLL-Light', sans-serif;
+  overflow-x: hidden;
 }
 
 * {
@@ -76,4 +77,22 @@ button.control-arrow {
   opacity: 0 !important;
   color: transparent !important;
   background-color: transparent !important;
+}
+
+.carousel .custom-legend {
+  /* background: rgba(0, 0, 0, 0.5); */
+  font-size: 1.2rem;
+  padding: 10px;
+  bottom: 20px;
+  right: 0;
+  color: red;
+}
+
+.carouselVideo {
+  display: block;
+  margin: 0 auto;
+  max-width: 90vw;
+  max-height: 90vh;
+  width: auto;
+  height: auto;
 }
