--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,13 @@ body {
   text-decoration: none;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 nav {
   display: flex;
   justify-content: center;
@@ -28,71 +35,7 @@ nav > a {
 }
 
 .carousel {
-  /* margin: 25px 10px; */
-  margin: 0 auto;
-  padding: 50px;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.content {
-  object-fit: cover;
-  width: 100%;
-}
-
-.contentWindow {
-  /* height: 90vh; */
-  position: relative;
-}
-
-.contentWindow > h2 {
-  color: red;
-}
-
-.carouselImage {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-}
-
-.control-arrow {
-  pointer-events: auto;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 50%;
-  height: 100%;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 4rem;
-  color: rgba(0, 0, 0, 0.3);
-  user-select: none;
-}
-
-button.control-arrow {
-  opacity: 0 !important;
-  color: transparent !important;
-  background-color: transparent !important;
-}
-
-.carousel .custom-legend {
-  /* background: rgba(0, 0, 0, 0.5); */
-  font-size: 1.2rem;
-  padding: 10px;
-  bottom: 20px;
-  right: 0;
-  color: red;
-}
-
-.carouselVideo {
-  display: block;
-  margin: 0 auto;
-  max-width: 90vw;
-  max-height: 90vh;
-  width: auto;
-  height: auto;
+  width: 100vw;
+  height: calc(100vh - 50px);
+  margin-top: 50px;
 }
