--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,14 @@ body {
   overflow-x: hidden;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 * {
   text-decoration: none;
+  box-sizing: border-box;
+  color: rgb(83, 83, 83);
 }
 
 html,
@@ -27,17 +33,23 @@ nav {
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 10;
+  z-index: 100;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #fff;
 }
 
 nav > a {
   margin: 0 5px;
+  align-self: center;
 }
 
 .carousel {
   width: 100vw;
-  height: calc(100vh - 50px);
-  margin-top: 50px;
+  height: calc(100vh);
+  /* margin-top: 50px; */
 }
 
 .carousel-wrapper {
@@ -71,6 +83,13 @@ nav > a {
   justify-content: center;
   align-items: center;
   height: 100%;
+  position: relative;
+}
+
+.counter {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
 }
 
 .carouselImage {
@@ -80,12 +99,26 @@ nav > a {
   height: auto;
 }
 
+.assetCompany {
+  font-size: 2rem;
+}
+
+.assetDetails {
+  font-size: 1rem;
+}
+
 .loading {
   height: 100vh;
   width: 100vw;
-  /* background-color: red; */
 }
 
 .loading > h1 {
   font-size: 10rem;
+}
+
+.customLegend {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  text-align: right;
 }
