--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@ body.no-scroll {
 * {
   text-decoration: none;
   box-sizing: border-box;
-  color: rgb(83, 83, 83);
+  color: #000;
 }
 
 html,
@@ -29,7 +29,7 @@ body {
 
 nav {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   position: fixed;
   top: 0;
   width: 100vw;
@@ -44,6 +44,7 @@ nav {
 nav > a {
   margin: 0 5px;
   align-self: center;
+  color: black;
 }
 
 .carousel {
@@ -99,26 +100,50 @@ nav > a {
   height: auto;
 }
 
-.assetCompany {
-  font-size: 2rem;
-}
-
-.assetDetails {
-  font-size: 1rem;
-}
-
-.loading {
-  height: 100vh;
-  width: 100vw;
-}
-
-.loading > h1 {
-  font-size: 10rem;
-}
-
 .customLegend {
   position: absolute;
   bottom: 20px;
   right: 20px;
   text-align: right;
+  font-size: 0.8rem;
+}
+
+.loading {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.loading > h1 {
+  font-size: 10rem;
+  text-align: center;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 50px);
+}
+
+.aboutSection {
+  font-style: italic;
+}
+
+.aboutSection,
+.contactDetailsSection {
+  max-width: 450px;
+  text-align: justify;
+  padding: 20px;
+}
+
+.contactDetails {
+  margin-bottom: 10px;
+}
+
+.label {
+  font-size: 0.8rem;
+  font-style: italic;
 }
