--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,11 +54,14 @@ nav > a {
   align-self: center;
   color: black;
   letter-spacing: 0.13rem;
+  font-size: 1.2rem;
+  padding: 0 10px;
 }
 
 .carousel {
   width: 100vw;
-  height: calc(100vh);
+  height: calc(100svh);
+  /* height: calc(100vh - 100px); */
   /* margin-top: 50px; */
 }
 
@@ -115,11 +118,11 @@ nav > a {
 }
 
 .counter {
-  font-size: 2rem;
+  font-size: 2.2rem;
 }
 
 .customLegend {
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-family: 'BradfordLL-RegularItalic', sans-serif;
   text-align: right;
 }
@@ -179,7 +182,7 @@ main {
 }
 
 .label {
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-family: BradfordLL-Regular;
 }
 
@@ -221,6 +224,11 @@ main {
     padding: 10px;
     border-radius: 4px;
     max-width: 90vw;
+  }
+
+  nav > a {
+    margin: 0 10px;
+    font-size: 1rem;
   }
 
   .mediaMeta .counter,
