--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,7 @@ body.no-scroll {
   text-decoration: none;
   box-sizing: border-box;
   color: #000;
+  font-size: 1.1rem;
 }
 
 html,
@@ -42,9 +43,9 @@ nav {
   top: 0;
   width: 100vw;
   z-index: 100;
-  height: 50px;
+  /* height: 50px; */
   margin: 0;
-  padding: 0;
+  padding: 25px;
   box-sizing: border-box;
   /* background-color: #fff; */
 }
@@ -54,7 +55,7 @@ nav > a {
   align-self: center;
   color: black;
   letter-spacing: 0.13rem;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   padding: 0 10px;
 }
 
@@ -105,7 +106,7 @@ nav > a {
   width: auto;
   height: auto;
   max-width: 75vw;
-  max-height: 70vh;
+  max-height: 80vh;
   object-fit: contain;
 }
 
@@ -184,6 +185,7 @@ main {
 .label {
   font-size: 1rem;
   font-family: BradfordLL-Regular;
+  font-family: BradfordLL-RegularItalic;
 }
 
 .mediaWrapper {
@@ -205,25 +207,29 @@ main {
 }
 
 .informationPage {
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
+}
+
+@media (max-width: 856px) {
+  .informationPage {
+    margin-top: 55px;
+  }
+
+  .contactDetailsSection {
+    width: 100%;
+  }
 }
 
 @media (max-width: 700px) {
-  .mediaMeta {
-    position: fixed; /* Stick to the viewport */
-    bottom: 10px;
-    left: 10px;
-    z-index: 50;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-end;
+  .informationPage {
+    margin-top: 55px;
+  }
 
+  nav {
     padding: 10px;
-    border-radius: 4px;
-    max-width: 90vw;
   }
 
   nav > a {
@@ -231,9 +237,17 @@ main {
     font-size: 1rem;
   }
 
-  .mediaMeta .counter,
-  .mediaMeta .customLegend {
-    text-align: left;
-    width: 100%;
+  .customLegend {
+    max-width: 50vw;
+  }
+
+  .mediaMeta {
+    position: fixed;
+    bottom: 0;
+    padding: 15px;
+  }
+
+  .carouselImage {
+    max-width: 95vw;
   }
 }
