--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,7 +131,7 @@ nav > a {
 .mediaMeta {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
   width: 100%;
   margin-top: 10px;
 }
