change the blur animation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -304,9 +304,11 @@ body > div > main > section.aboutSection > p {
 @keyframes blur-out {
   from {
     filter: blur(0);
+    opacity: 1;
   }
   to {
     filter: blur(6px);
+    opacity: 0.3;
   }
 }
 
