--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,7 +114,7 @@ nav > a {
 }
 
 .customLegend > p {
-  font-size: clamp(0.6rem, 2vw, 1rem);
+  font-size: clamp(0.47rem, 2vw, 0.9rem);
 }
 
 .mediaMeta {
@@ -182,7 +182,6 @@ nav > a {
   flex-direction: column;
   font-size: 1.6rem;
   line-height: 1.2;
-  text-align: justify;
 }
 
 .contactDetailsSection {
@@ -247,6 +246,11 @@ body > div > main > section.aboutSection > p {
     margin-top: 20px;
   }
 
+  .carouselImage {
+    /* max-width: 90vw; */
+    max-height: 70vh;
+  }
+
   .aboutSection,
   .contactDetailsSection {
     margin: 0;
@@ -255,12 +259,17 @@ body > div > main > section.aboutSection > p {
   }
 
   .aboutSection {
-    margin-top: 30px;
+    margin-top: 90px;
+    font-size: 1.4rem;
   }
 
   .aboutSection > p:nth-child(1) {
     margin: 55px 0 0;
     /* width: 94vw; */
+  }
+
+  .contactDetailsSection > * {
+    font-size: 0.4rem;
   }
 
   .labelValue {
