--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,7 +175,7 @@ nav > a {
 .aboutSection {
   max-width: 60vw;
   height: auto;
-  padding: 20px;
+  padding: 20px 0px;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -186,7 +186,7 @@ nav > a {
 .contactDetailsSection {
   max-width: 50vw;
   text-align: justify;
-  padding: 20px;
+  padding: 20px 0px;
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
@@ -246,7 +246,7 @@ body > div > main > section.aboutSection > p {
 
   .aboutSection {
     margin-top: 90px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
   }
 
   .aboutSection > p:nth-child(1) {
@@ -267,7 +267,7 @@ body > div > main > section.aboutSection > p {
   }
 
   nav > a {
-    margin: 30px 10px;
+    margin: 30px 0px;
     font-size: 0.9rem;
     padding: 0;
   }
@@ -278,7 +278,7 @@ body > div > main > section.aboutSection > p {
 
   .mediaMeta {
     bottom: 0;
-    padding: 20px;
+    padding: 20px 10px;
   }
 
   .carouselImage {
@@ -287,7 +287,7 @@ body > div > main > section.aboutSection > p {
   }
 
   .counter {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 }
 
