--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,9 @@
 }
 
 body {
-  font-family: 'BradfordLL-MediumItalic', serif;
+  margin: 0;
+  padding: 0;
+  font-family: 'BradfordLL-Regular', serif;
   overflow-x: hidden;
 }
 
@@ -26,13 +28,7 @@ body.no-scroll {
   text-decoration: none;
   box-sizing: border-box;
   color: #000;
-  font-size: 1.1rem;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
+  font-variant: oldstyle-nums;
 }
 
 nav {
@@ -49,10 +45,9 @@ nav {
 
 nav > a {
   align-self: center;
-  color: black;
   letter-spacing: 0.13rem;
   font-size: 1.3rem;
-  padding: 0 10px;
+  padding: 0;
 }
 
 .carousel {
@@ -125,8 +120,6 @@ nav > a {
   position: absolute;
   bottom: 0;
   padding: 10px 35px;
-  /* bottom: 0;
-    padding: 20px; */
 }
 
 .legendContainer {
@@ -172,6 +165,13 @@ nav > a {
   padding-top: 85px;
 }
 
+.aboutTitle {
+  font-size: 1.5rem;
+  padding-bottom: 20px;
+  font-family: BradfordLL-RegularItalic;
+  letter-spacing: 0.1em;
+}
+
 .aboutSection {
   max-width: 60vw;
   height: auto;
@@ -179,8 +179,6 @@ nav > a {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  font-size: 1.5rem;
-  line-height: 1.2;
 }
 
 .contactDetailsSection {
@@ -190,23 +188,35 @@ nav > a {
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
+  /* line-height: 1.2; */
+}
+
+.contactDetailsSection,
+.aboutSection {
+  font-family: BradfordLL-Regular;
+  font-size: 1.5rem;
+  line-height: 1.3;
 }
 
 .contactDetails {
   margin-bottom: 30px;
+  line-height: 1.3;
 }
 
 .label {
   font-size: 1.1rem;
   font-family: BradfordLL-Regular;
+  letter-spacing: 0.1em;
+  line-height: 1.3;
 }
 
 .labelValue {
   font-size: 1.4rem;
   letter-spacing: 0.15rem;
+  line-height: 1.3;
 }
 
-body > div > main > section.aboutSection > p {
+body > div > main > section.aboutSection > span {
   font-family: bradfordLL-RegularItalic;
   font-size: 1rem;
   margin: 40px 0;
@@ -233,7 +243,7 @@ body > div > main > section.aboutSection > p {
     flex-direction: column;
     width: 100vw;
     justify-content: flex-start;
-    padding: 0;
+    padding: 0 10px;
     margin-top: 20px;
   }
 
@@ -251,11 +261,6 @@ body > div > main > section.aboutSection > p {
 
   .aboutSection > p:nth-child(1) {
     margin: 55px 0 0;
-    /* width: 94vw; */
-  }
-
-  .contactDetailsSection > * {
-    font-size: 0.4rem;
   }
 
   .labelValue {
@@ -271,10 +276,6 @@ body > div > main > section.aboutSection > p {
     font-size: 0.9rem;
     padding: 0;
   }
-
-  /* .customLegend {
-    max-width: 50vw;
-  } */
 
   .mediaMeta {
     bottom: 0;
