--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,10 +13,15 @@
   src: url('/BradfordLL-Regular.otf');
 }
 
+@font-face {
+  font-family: BradfordLL-Medium;
+  src: url('/BradfordLL-Medium.otf');
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'BradfordLL-Regular', serif;
+  font-family: 'BradfordLL-Medium', serif;
   overflow-x: hidden;
 }
 
@@ -174,7 +179,7 @@ nav > a {
 }
 
 .aboutSection {
-  max-width: 60vw;
+  max-width: 1006px;
   height: auto;
   padding: 20px 0px;
   display: flex;
@@ -194,7 +199,7 @@ nav > a {
 
 .contactDetailsSection,
 .aboutSection {
-  font-family: BradfordLL-Regular;
+  font-family: BradfordLL-Medium;
   font-size: 1.5rem;
   line-height: 1.3;
 }
@@ -206,7 +211,7 @@ nav > a {
 
 .label {
   font-size: 1.1rem;
-  font-family: BradfordLL-Regular;
+  font-family: BradfordLL-Medium;
   letter-spacing: 0.1em;
   line-height: 1.3;
 }
