--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -187,6 +187,10 @@ nav > a {
   flex-direction: column;
 }
 
+.aboutText {
+  margin: 0;
+}
+
 .contactDetailsSection {
   max-width: 50vw;
   text-align: justify;
@@ -211,8 +215,8 @@ nav > a {
 
 .label {
   font-size: 1.2rem;
-  font-family: BradfordLL-Medium;
-  letter-spacing: 0.1em;
+  font-family: BradfordLL-MediumItalic;
+  /* letter-spacing: 0.1em; */
   line-height: 1.3;
 }
 
@@ -224,7 +228,7 @@ nav > a {
 }
 
 body > div > main > section.aboutSection > span {
-  font-family: bradfordLL-RegularItalic;
+  font-family: bradfordLL-MediumItalic;
   font-size: 1.2rem;
   margin: 40px 0 0;
 }
@@ -266,9 +270,9 @@ body > div > main > section.aboutSection > span {
     font-size: 1.2rem;
   }
 
-  .aboutSection > p:nth-child(1) {
+  /* .aboutSection > p:nth-child(1) {
     margin: 55px 0 0;
-  }
+  } */
 
   .labelValue {
     letter-spacing: 0.075rem;
