--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -209,22 +209,28 @@ nav > a {
 }
 
 .contactDetails {
-  margin-top: 20px;
+  margin-top: 18px;
   line-height: 1.3;
 }
 
 .label {
   font-size: 1.2rem;
   font-family: BradfordLL-MediumItalic;
-  /* letter-spacing: 0.1em; */
-  line-height: 1.3;
+  letter-spacing: 0.1em;
+  /* line-height: 1.3; */
 }
 
 .labelValue {
   font-family: bradfordLL-MediumItalic;
   font-size: 1.2rem;
   letter-spacing: 0.15rem;
-  line-height: 1.3;
+  line-height: 1;
+}
+
+.socialMedia {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 body > div > main > section.aboutSection > span {
@@ -266,7 +272,7 @@ body > div > main > section.aboutSection > span {
   }
 
   .aboutSection {
-    margin-top: 90px;
+    margin-top: 70px;
     font-size: 1.2rem;
   }
 
