--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -196,6 +196,7 @@ nav > a {
   text-align: justify;
   padding: 20px 0px;
   display: flex;
+
   justify-content: flex-start;
   flex-direction: column;
   /* line-height: 1.2; */
@@ -211,6 +212,9 @@ nav > a {
 .contactDetails {
   margin-top: 18px;
   line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .label {
