--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,11 +18,16 @@
   src: url('/BradfordLL-Medium.otf');
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'BradfordLL-Medium', serif;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body.no-scroll {
@@ -50,9 +55,14 @@ nav {
 
 nav > a {
   align-self: center;
-  /* letter-spacing: 0.13rem; */
-  font-size: 1.3rem;
+  font-size: 1rem;
   padding: 0;
+}
+
+.navbarTitle {
+  font-size: 1.85rem;
+  font-family: 'BradfordLL-MediumItalic', serif;
+  align-content: center;
 }
 
 .carousel {
@@ -116,6 +126,15 @@ nav > a {
   font-size: clamp(0.55rem, 2vw, 1rem);
 }
 
+.mediaWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  max-width: 90vw;
+}
+
 .mediaMeta {
   display: flex;
   justify-content: space-between;
@@ -150,9 +169,65 @@ nav > a {
   letter-spacing: 0.13rem;
 }
 
-/* ======================================info page */
+/* ======================================info Section */
 
-.informationPage {
+main {
+  min-height: calc(100vh - 100px);
+  margin-top: 100px;
+  font-size: clamp(1rem, 1.52vw, 2.2rem);
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#information {
+  scroll-margin-top: 80px;
+  padding: 30px 20px 0;
+}
+
+.aboutText {
+  font-family: BradfordLL-Medium;
+  text-align: center;
+  width: 60vw;
+  max-width: 1250px;
+  margin: 80px auto 0;
+  line-height: 1.2;
+}
+
+.name {
+  font-family: BradfordLL-MediumItalic;
+}
+
+/* ======================================CONTACT DETAILS */
+
+.contactDetailsSection {
+  padding: 80px 20px;
+  text-align: center;
+  line-height: 1.2;
+}
+
+.contactDetails {
+  display: flex;
+  flex-direction: column;
+}
+
+.socialMedia {
+  display: flex;
+  flex-direction: column;
+}
+
+.italicHover {
+  transition: font-family 0.2s ease-in-out;
+}
+
+.italicHover:hover {
+  font-family: 'BradfordLL-MediumItalic', serif;
+}
+
+/* .informationPage {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -196,10 +271,8 @@ nav > a {
   text-align: justify;
   padding: 20px 0px;
   display: flex;
-
   justify-content: flex-start;
   flex-direction: column;
-  /* line-height: 1.2; */
 }
 
 .contactDetailsSection,
@@ -221,7 +294,6 @@ nav > a {
   font-size: 1.2rem;
   font-family: BradfordLL-MediumItalic;
   letter-spacing: 0.1em;
-  /* line-height: 1.3; */
 }
 
 .labelValue {
@@ -241,16 +313,9 @@ body > div > main > section.aboutSection > span {
   font-family: bradfordLL-MediumItalic;
   font-size: 1.2rem;
   margin: 40px 0 0;
-}
+} */
 
-.mediaWrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: fit-content;
-  max-width: 90vw;
-}
+/* MEDIA QUERIES ************************************************************* */
 
 @media (max-width: 876px) {
   .aboutSection,
@@ -280,10 +345,6 @@ body > div > main > section.aboutSection > span {
     font-size: 1.2rem;
   }
 
-  /* .aboutSection > p:nth-child(1) {
-    margin: 55px 0 0;
-  } */
-
   .labelValue {
     letter-spacing: 0.075rem;
   }
@@ -310,6 +371,11 @@ body > div > main > section.aboutSection > span {
 
   .counter {
     font-size: 1.3rem;
+  }
+
+  .aboutText {
+    margin-top: 50px;
+    width: 100%;
   }
 }
 
