centered the name

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,9 +59,13 @@ nav > a {
 }
 
 .navbarTitle {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
   font-size: 1.85rem;
   font-family: 'BradfordLL-MediumItalic', serif;
-  align-content: center;
 }
 
 .carousel {
