--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,7 +64,8 @@ nav > a {
   top: 50%;
   transform: translate(-50%, -50%);
   margin: 0;
-  font-size: 1.85rem;
+  font-size: clamp(1.5rem, 5vw, 1.85rem);
+  white-space: nowrap;
   font-family: 'BradfordLL-MediumItalic', serif;
 }
 
@@ -230,94 +231,6 @@ main {
   font-family: 'BradfordLL-MediumItalic', serif;
 }
 
-/* .informationPage {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  width: 100vw;
-}
-
-.informationWrapper {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row-reverse;
-  padding: 0 25px;
-  align-items: flex-end;
-  justify-content: space-between;
-  width: 100%;
-  padding-top: 85px;
-}
-
-.aboutTitle {
-  font-size: 1.5rem;
-  padding-top: 20px;
-  font-family: BradfordLL-RegularItalic;
-  letter-spacing: 0.1em;
-}
-
-.aboutSection {
-  max-width: 729px;
-  height: auto;
-  padding: 20px 0px;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-}
-
-.aboutText {
-  margin: 0;
-}
-
-.contactDetailsSection {
-  max-width: 50vw;
-  text-align: justify;
-  padding: 20px 0px;
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-}
-
-.contactDetailsSection,
-.aboutSection {
-  font-family: BradfordLL-Medium;
-  font-size: 1.5rem;
-  line-height: 1.3;
-}
-
-.contactDetails {
-  margin-top: 18px;
-  line-height: 1.3;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.label {
-  font-size: 1.2rem;
-  font-family: BradfordLL-MediumItalic;
-  letter-spacing: 0.1em;
-}
-
-.labelValue {
-  font-family: bradfordLL-MediumItalic;
-  font-size: 1.2rem;
-  letter-spacing: 0.15rem;
-  line-height: 1;
-}
-
-.socialMedia {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-}
-
-body > div > main > section.aboutSection > span {
-  font-family: bradfordLL-MediumItalic;
-  font-size: 1.2rem;
-  margin: 40px 0 0;
-} */
-
 /* MEDIA QUERIES ************************************************************* */
 
 @media (max-width: 876px) {
@@ -328,14 +241,6 @@ body > div > main > section.aboutSection > span {
 }
 
 @media (max-width: 700px) {
-  /* .informationWrapper {
-    flex-direction: column;
-    width: 100vw;
-    justify-content: flex-start;
-    padding: 0 10px;
-    margin-top: 20px;
-  } */
-
   main {
     padding-bottom: 200px;
   }
