--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@ nav {
   top: 0;
   width: 100vw;
   z-index: 100;
-  margin: 0;
+  margin-top: 5px;
   padding: 20px;
   box-sizing: border-box;
 }
@@ -73,6 +73,17 @@ nav > a {
 
 .nav-link.active {
   color: #000;
+}
+
+.nav-link.active::before {
+  content: '';
+  display: inline-block;
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: currentColor;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+  vertical-align: middle;
 }
 
 .nav-link {
