--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,11 +92,11 @@ nav > a {
   background-color: currentColor;
   border-radius: 50%;
   margin-right: 0.5rem;
-  vertical-align: middle;
+  /* vertical-align: middle; */
 }
 
 .nav-link {
-  color: #cecece;
+  /* color: #cecece; */
   transition: color 0.5s ease;
 }
 
